syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "/location";

service CourierLatestPosition {
  rpc getCourierLatestPosition (CourierLatestPositionRequest) returns (CourierLatestPositionResponse) {}
}

message CourierLatestPositionRequest {
    string CourierID = 1;
}

message CourierLatestPositionResponse {
    string CourierID = 1;
  	double  latitude = 2;
  	double longitude = 3;
  	google.protobuf.Timestamp time = 4;
}