syntax = "proto3";

option go_package = "generate/order/v1";

service Courier {
  rpc GetFirstAvailableCourier (Null) returns (GetFirstAvailableCourierResponse) {}
}

message Null {

}

message GetFirstAvailableCourierResponse {
  string courier_id = 1;
}